BugFix: Location Virtual Tour Spilling outside of gradient area, noticible on bottom left.

--- a/css/pages/project-page.css
+++ b/css/pages/project-page.css
@@ -353,6 +353,10 @@
 		height: 400px;
 	}
 
+	.location-section .location-image-container .panorama-viewer {
+		right: var(--space-25);
+	}
+
 	.location-section .location-card {
 		width: calc( var(--space-100) * 3 );
 		height: calc( var(--space-100) * 3 );
